--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 env:
-  INSTANCE: 'CodeDiary/in'
+  INSTANCE: 'CoderDiary/in'
   ARTIFACT: 'webHelpIN2-all.zip'
   DOCKER_VERSION: '241.18775'
 
