关于线程池

--- a/CoderDiary/writerside.cfg
+++ b/CoderDiary/writerside.cfg
@@ -8,5 +8,5 @@
     <categories src="c.list"/>
     <vars src="v.list"/>
     <instance src="in.tree"/>
-    <instance src="movie.tree"/>
+    <instance src="movie.tree" web-path="movie"/>
 </ihp>
