--- a/CoderDiary/writerside.cfg
+++ b/CoderDiary/writerside.cfg
@@ -9,4 +9,5 @@
     <vars src="v.list"/>
     <instance src="in.tree"/>
     <instance src="movie.tree" web-path="movie"/>
+    <snippets src="codeSnippets"/>
 </ihp>
