--- a/CoderDiary/writerside.cfg
+++ b/CoderDiary/writerside.cfg
@@ -9,5 +9,6 @@
     <vars src="v.list"/>
     <instance src="in.tree"/>
     <instance src="movie.tree" web-path="movie"/>
+    <instance src="digital-share.tree" web-path="digital" version="1.0.0"/>
     <snippets src="codeSnippets"/>
 </ihp>
