--- a/CoderDiary/writerside.cfg
+++ b/CoderDiary/writerside.cfg
@@ -10,5 +10,6 @@
     <instance src="in.tree"/>
     <instance src="movie.tree" web-path="movie"/>
     <instance src="digital-share.tree" web-path="digital" version="1.0.0"/>
+    <instance src="life.tree"/>
     <snippets src="codeSnippets"/>
 </ihp>
