--- a/CoderDiary/writerside.cfg
+++ b/CoderDiary/writerside.cfg
@@ -11,5 +11,6 @@
     <instance src="movie.tree" web-path="movie"/>
     <instance src="digital-share.tree" web-path="digital" version="1.0.0"/>
     <instance src="life.tree"/>
+    <instance src="AutoDDL.tree"/>
     <snippets src="codeSnippets"/>
 </ihp>
