📝 docs(CoderDiary): 初始化项目文档结构
- 创建了项目文档目录和多个文档文件
- 添加了框架开发日志、关键功能验证、多层不变软件架构等文档
- 描述了项目的定位、核心功能和开发内容
- 记录了框架开发的初步想法和计划

--- a/CoderDiary/writerside.cfg
+++ b/CoderDiary/writerside.cfg
@@ -12,5 +12,8 @@
     <instance src="digital-share.tree" web-path="digital" version="1.0.0"/>
     <instance src="life.tree"/>
     <instance src="AutoDDL.tree"/>
+    <instance src="jimmer.tree"/>
+    <instance src="框.tree"/>
+    <instance src="a.tree"/>
     <snippets src="codeSnippets"/>
 </ihp>
